--- a/AndroidMusicQuiz/MusicTheoryRomanNumeralAnalysisQuiz/app/src/main/res/layout/activity_mtrnaquiz.xml
+++ b/AndroidMusicQuiz/MusicTheoryRomanNumeralAnalysisQuiz/app/src/main/res/layout/activity_mtrnaquiz.xml
@@ -5,28 +5,201 @@
     android:orientation="vertical"
     android:padding="5dp"
     android:background="#f9f9f9">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1.00"
+            android:layout_weight="1.50"
             android:orientation="horizontal">
-            <TextView
-                android:id="@+id/trebleClef"
-                android:text="Music notation"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:textSize="32sp"
-                android:gravity="center"
-                android:typeface="serif" />
-        </LinearLayout>
+            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
 
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/trebleClef"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="230sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginTop="35dp"/>
+
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/staffLines"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="230sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="35dp"/>
+
+                <!-- Sharps -->
+
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/fSharp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="\u266F"
+                    android:textSize="125sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_marginLeft="120dp"
+                    android:layout_marginTop="2dp"/> <!-- -43 -->
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/cSharp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="\u266F"
+                    android:textSize="125sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_marginLeft="160dp"
+                    android:layout_marginTop="70dp"/>
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/gSharp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="\u266F"
+                    android:textSize="125sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_marginLeft="200dp"
+                    android:layout_marginTop="-18dp"/>
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/dSharp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="\u266F"
+                    android:textSize="125sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_marginLeft="240dp"
+                    android:layout_marginTop="45dp"/>
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/aSharp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="\u266F"
+                    android:textSize="125sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_marginLeft="280dp"
+                    android:layout_marginTop="114dp"/>
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/eSharp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="\u266F"
+                    android:textSize="125sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_marginLeft="320dp"
+                    android:layout_marginTop="25dp"/>
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/bSharp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="\u266F"
+                    android:textSize="125sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_marginLeft="360dp"
+                    android:layout_marginTop="90dp"/>
+
+                <!-- Flats -->
+
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/bFlat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="\u266D"
+                    android:textSize="125sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_marginLeft="120dp"
+                    android:layout_marginTop="2dp"/> <!-- -43 -->
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/eFlat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="\u266D"
+                    android:textSize="125sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_marginLeft="160dp"
+                    android:layout_marginTop="70dp"/>
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/aFlat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="\u266D"
+                    android:textSize="125sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_marginLeft="200dp"
+                    android:layout_marginTop="-18dp"/>
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/dFlat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="\u266D"
+                    android:textSize="125sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_marginLeft="240dp"
+                    android:layout_marginTop="45dp"/>
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/gFlat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="\u266D"
+                    android:textSize="125sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_marginLeft="280dp"
+                    android:layout_marginTop="114dp"/>
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/cFlat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="\u266D"
+                    android:textSize="125sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_marginLeft="320dp"
+                    android:layout_marginTop="25dp"/>
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/fFlat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="\u266D"
+                    android:textSize="125sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_marginLeft="360dp"
+                    android:layout_marginTop="90dp"/>
+
+            </FrameLayout>
+        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -43,10 +216,11 @@
                     android:text="Key area:"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:textSize="32sp"
-                    android:gravity="center"
-                    android:typeface="serif" />
+                    android:layout_weight="0.5"
+                    android:textSize="42sp"
+                    android:gravity="center_horizontal"
+                    android:typeface="serif"
+                    android:textColor="#000000"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -178,12 +352,12 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:textSize="80sp"
+                    android:textSize="60sp"
                     android:background="@drawable/pink_buttons"
                     android:textColor="@drawable/pink_buttons_text"
                     android:textStyle="bold"
-                    android:gravity="top"
-                    android:layout_margin="5dp" />
+                    android:layout_margin="5dp"
+                    android:gravity="center"/>
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
@@ -218,7 +392,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="2"
                     android:text="Number\nof acci-\ndentals"
-                    android:textSize="32sp"
+                    android:textSize="28sp"
                     android:textColor="#f2ac9c"
                     android:textStyle="bold"
                     android:gravity="right"
@@ -241,7 +415,8 @@
                             android:text="0-3"
                             android:textSize="32sp"
                             android:textColor="#f2ac9c"
-                            android:textStyle="bold" />
+                            android:textStyle="bold"
+                            android:buttonTint="#f2ac9c" />
                         <RadioButton
                             android:id="@+id/hardRadio"
                             android:layout_width="match_parent"
@@ -256,5 +431,5 @@
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+
 </LinearLayout>
