--- a/AndroidMusicQuiz/MusicTheoryRomanNumeralAnalysisQuiz/app/src/main/res/layout/activity_mtrnaquiz.xml
+++ b/AndroidMusicQuiz/MusicTheoryRomanNumeralAnalysisQuiz/app/src/main/res/layout/activity_mtrnaquiz.xml
@@ -14,6 +14,8 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent">
 
+                <!-- treble clef and staff lines -->
+
                 <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
                     android:id="@+id/trebleClef"
                     android:layout_width="wrap_content"
@@ -50,7 +52,7 @@
                     android:typeface="serif"
                     android:textColor="#ff000000"
                     android:layout_marginLeft="120dp"
-                    android:layout_marginTop="2dp"/> <!-- -43 -->
+                    android:layout_marginTop="2dp"/> <!-- -44 -->
                 <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
                     android:id="@+id/cSharp"
                     android:layout_width="wrap_content"
@@ -130,7 +132,7 @@
                     android:typeface="serif"
                     android:textColor="#ff000000"
                     android:layout_marginLeft="120dp"
-                    android:layout_marginTop="2dp"/> <!-- -43 -->
+                    android:layout_marginTop="87dp"/> <!-- -43 -->
                 <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
                     android:id="@+id/eFlat"
                     android:layout_width="wrap_content"
@@ -141,7 +143,7 @@
                     android:typeface="serif"
                     android:textColor="#ff000000"
                     android:layout_marginLeft="160dp"
-                    android:layout_marginTop="70dp"/>
+                    android:layout_marginTop="25dp"/>
                 <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
                     android:id="@+id/aFlat"
                     android:layout_width="wrap_content"
@@ -152,7 +154,7 @@
                     android:typeface="serif"
                     android:textColor="#ff000000"
                     android:layout_marginLeft="200dp"
-                    android:layout_marginTop="-18dp"/>
+                    android:layout_marginTop="112dp"/>
                 <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
                     android:id="@+id/dFlat"
                     android:layout_width="wrap_content"
@@ -163,7 +165,7 @@
                     android:typeface="serif"
                     android:textColor="#ff000000"
                     android:layout_marginLeft="240dp"
-                    android:layout_marginTop="45dp"/>
+                    android:layout_marginTop="43dp"/>
                 <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
                     android:id="@+id/gFlat"
                     android:layout_width="wrap_content"
@@ -174,7 +176,7 @@
                     android:typeface="serif"
                     android:textColor="#ff000000"
                     android:layout_marginLeft="280dp"
-                    android:layout_marginTop="114dp"/>
+                    android:layout_marginTop="130dp"/>
                 <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
                     android:id="@+id/cFlat"
                     android:layout_width="wrap_content"
@@ -185,7 +187,7 @@
                     android:typeface="serif"
                     android:textColor="#ff000000"
                     android:layout_marginLeft="320dp"
-                    android:layout_marginTop="25dp"/>
+                    android:layout_marginTop="69dp"/>
                 <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
                     android:id="@+id/fFlat"
                     android:layout_width="wrap_content"
@@ -196,7 +198,189 @@
                     android:typeface="serif"
                     android:textColor="#ff000000"
                     android:layout_marginLeft="360dp"
-                    android:layout_marginTop="90dp"/>
+                    android:layout_marginTop="156dp"/>
+
+                <!-- Noteheads, 22dp between each margin-top -->
+
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/notehead0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="200sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_marginLeft="440dp"
+                    android:layout_marginTop="167dp"/> <!-- -44-->
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/notehead1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="200sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_marginLeft="440dp"
+                    android:layout_marginTop="145dp"/>
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/notehead2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="200sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_marginLeft="440dp"
+                    android:layout_marginTop="123dp"/>
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/notehead3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="200sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_marginLeft="440dp"
+                    android:layout_marginTop="101dp"/>
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/notehead4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="200sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_marginLeft="440dp"
+                    android:layout_marginTop="79dp"/>
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/notehead5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="200sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_marginLeft="440dp"
+                    android:layout_marginTop="57dp"/>
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/notehead6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="200sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_marginLeft="440dp"
+                    android:layout_marginTop="35dp"/>
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/notehead7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="200sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_marginLeft="440dp"
+                    android:layout_marginTop="13dp"/>
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/notehead8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="200sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_marginLeft="440dp"
+                    android:layout_marginTop="-9dp"/>
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/notehead9"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="200sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_marginLeft="440dp"
+                    android:layout_marginTop="-31dp"/>
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/notehead10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="200sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_marginLeft="440dp"
+                    android:layout_marginTop="-53dp"/>
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/notehead11"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="200sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_marginLeft="440dp"
+                    android:layout_marginTop="-75dp"/>
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/notehead12"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="200sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_marginLeft="440dp"
+                    android:layout_marginTop="-97dp"/>
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/notehead13"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="200sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_marginLeft="440dp"
+                    android:layout_marginTop="-119dp"/>
+
+                <!-- ledger lines -->
+
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/ledgerLineC4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="\u2015"
+                    android:textSize="93sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_marginLeft="435dp"
+                    android:layout_marginTop="248dp"/>
+                <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicText
+                    android:id="@+id/suppLedgerLineC4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="\u2015"
+                    android:textSize="93sp"
+                    android:gravity="center"
+                    android:typeface="serif"
+                    android:textColor="#ff000000"
+                    android:layout_marginLeft="478dp"
+                    android:layout_marginTop="248dp"/>
 
             </FrameLayout>
         </LinearLayout>
