--- a/AndroidMusicQuiz/MusicTheoryRomanNumeralAnalysisQuiz/app/src/main/res/layout/activity_mtrnaquiz.xml
+++ b/AndroidMusicQuiz/MusicTheoryRomanNumeralAnalysisQuiz/app/src/main/res/layout/activity_mtrnaquiz.xml
@@ -865,7 +865,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginLeft="5dp"
         android:layout_marginStart="5dp"
-        android:text="@string/placeHolderCheckText"/>
+        android:text="@string/CheckCharacter"/>
 
     <Button
         android:id="@+id/answerButton1"
@@ -896,7 +896,7 @@
         android:layout_alignBottom="@+id/answerButton2"
         android:layout_toLeftOf="@+id/answerButton2"
         android:layout_toStartOf="@+id/answerButton2"
-        android:text="@string/placeHolderXText"/>
+        android:text="@string/XCharacter"/>
 
     <Button
         android:id="@+id/answerButton2"
@@ -925,7 +925,7 @@
         android:layout_height="wrap_content"
         android:textColor="#f2ac9c"
         android:textSize="23sp"
-        android:text="@string/placeHolderXText"
+        android:text="@string/XCharacter"
         android:layout_alignBaseline="@+id/answerButton3"
         android:layout_alignBottom="@+id/answerButton3"
         android:layout_alignParentLeft="true"
@@ -962,7 +962,7 @@
         android:layout_alignBottom="@+id/answerButton4"
         android:layout_toLeftOf="@+id/answerButton4"
         android:layout_toStartOf="@+id/answerButton4"
-        android:text="@string/placeHolderXText"/>
+        android:text="@string/XCharacter"/>
 
     <Button
         android:id="@+id/answerButton4"
